|
Quick Lists
|
|
Bug ID:
|
6672698
|
|
Votes
|
0
|
|
Synopsis
|
mangle_unused_area() should not remangle the entire heap at each collection.
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b03)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6581118
,
6672574
|
|
Submit Date
|
07-MAR-2008
|
|
Description
|
mangle_unused() writes a pattern into the unused part of the heap in debug mode.
If the heap is large, this can cause excessively long GC's to the point
that tests timeout.
Posted Date : 2008-03-07 15:25:40.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
managle_unused_area() only mangles from top to end in a space. Set some
artificial limit on the amount that will be mangled at each collection.
Posted Date : 2008-03-07 15:42:23.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/12eea04c8b06
Posted Date : 2008-07-10 00:31:49.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |