hotspot/src/share/vm/memory/generation.hpp
@@ -376,6 +376,9 @@ class Generation: public CHeapObj {
   // The default is to do nothing.
   virtual void gc_epilogue(bool full) {};
 
+  // Save the high water marks for the used space in a generation.
+  virtual void record_spaces_top() {};
+
   // Some generations may need to be "fixed-up" after some allocation
   // activity to make them parsable again. The default is to do nothing.
   virtual void ensure_parsability() {};
@@ -475,6 +478,10 @@ class Generation: public CHeapObj {
   // augmented list.  The default is to offer no space.
   virtual void contribute_scratch(ScratchBlock*& list, Generation* requestor,
                                   size_t max_alloc_words) {}
+
+  // Give each generation an opportunity to do clean up for any
+  // contributed scratch.
+  virtual void reset_scratch() {};
 
   // When an older generation has been collected, and perhaps resized,
   // this method will be invoked on all younger generations (from older to
@@ -698,6 +705,8 @@ class OneContigSpaceCardGeneration: public CardGeneration {
   virtual void prepare_for_verify();
 
   virtual void gc_epilogue(bool full);
+
+  virtual void record_spaces_top();
 
   virtual void verify(bool allow_dirty);
   virtual void print_on(outputStream* st) const;
